k8s/k8s-despliegue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python-deployment
  labels:
    app: api-python
spec:
  # Le ordenamos a Kubernetes que mantenga siempre 2 copias de la app vivas
  replicas: 2
  selector:
    matchLabels:
      app: api-python
  template:
    metadata:
      labels:
        app: api-python
    spec:
      automountServiceAccountToken: false
      containers:
      - name: mi-api-python
        # REEMPLAZA con tu usuario real de Docker Hub, donde subimos la imagen en fases anteriores
        image: marcosfauase/proyecto-real:latest
        # Le ordenamos a Kubernetes que se baje la imagen siempre de internet para tener la última versión
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: api-python-service
spec:
  selector:
    app: api-python
  ports:
    - protocol: TCP
      port: 80       # Puerto por el que escuchará el Servicio de forma interna
      targetPort: 8000 # Puerto interno de tu aplicación de FastAPI
  type: ClusterIP # IP interna dentro del clúster
